fix spacing to prevent Latex from messing up Markdown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,18 +127,9 @@ table td {
   border-width: 0 0 2px;
 }
 
-.eqnboxed {
-  border-style: solid;
-  border-color: #cccccc;
-  border-width: 1px;
-  border-radius: 0;
-  margin: 10px;
-  padding: 10px;
-}
-
 .rem-dan {
   border-style: solid;
-  border-color: #cccccc;
+  border-color: #000000;
   border-width: 1px;
   border-radius: 0;
   margin: 10px;
